<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_number"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:textColorHint="#757575"
        android:minHeight="48dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/first_number"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_second_number"
        android:autofillHints=""
        android:textColorHint="#757575"
        />

    <TextView
        android:id="@+id/task_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/second_number"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/choose_task"
        />

    <RadioGroup
        android:id="@+id/calculation_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/task_question"
        app:layout_constraintStart_toStartOf="parent"
        android:checkedButton="@id/add">

        <RadioButton
            android:id="@+id/add"
            android:layout_height="match_parent"
            android:layout_width="180dp"
            android:text="@string/addition" />
        <RadioButton
            android:id="@+id/subtract"
            android:layout_height="match_parent"
            android:layout_width="180dp"
            android:text="@string/subtraction" />
        <RadioButton
            android:id="@+id/multiply"
            android:layout_height="match_parent"
            android:layout_width="180dp"
            android:text="@string/multiplication" />
        <RadioButton
            android:id="@+id/divide"
            android:layout_height="match_parent"
            android:layout_width="180dp"
            android:text="@string/division" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation_option" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:text="@string/result"
        />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/result"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        tools:ignore="ExtraText,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>